--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,13 @@
 version: 0.2
 
+env:
+  variables:
+    REPOSITORY_URI: 034362031980.dkr.ecr.us-east-1.amazonaws.com/aime-chatbot
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION
-      - REPOSITORY_URI = 034362031980.dkr.ecr.us-east-1.amazonaws.com/aime-chatbot
   build:
     commands:
       - echo Build started on `date`
