--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     REPOSITORY_URI: 034362031980.dkr.ecr.us-east-1.amazonaws.com/aime-chatbot
+    git-credential-helper: yes
 phases:
   pre_build:
     commands:
