--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     REPOSITORY_URI: 034362031980.dkr.ecr.us-east-1.amazonaws.com/aime-chatbot
+    IMAGE_TAG: latest
     git-credential-helper: yes
 phases:
   pre_build:
@@ -12,11 +13,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Cloning the code from GitHub...
-      - git clone https://github.com/scottalanturner/ai_me.git
-      - cd your-repo
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
   post_build:
     commands:
