--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,17 +4,29 @@ env:
   variables:
     REPOSITORY_URI: 034362031980.dkr.ecr.us-east-1.amazonaws.com/aime-chatbot
     IMAGE_TAG: latest
+
 phases:
+  install:
+    commands:
+      - echo Installing Git...
+      - yum install -y git  # Ensure Git is installed
+
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
+      - echo Cloning the GitHub repository...
+      # If using HTTPS with a token (passed as a parameter or from Secrets Manager)
+      - git clone https://$GITHUB_TOKEN:x-oauth-basic@github.com/scottalanturner/ai_me.git
+      - cd ai_me
+
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
+
   post_build:
     commands:
       - echo Build completed on `date`
@@ -22,3 +34,6 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
 
+artifacts:
+  files:
+    - '**/*'
