refactoring, added knowledgebase

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 model_id: anthropic.claude-instant-v1
-knowledge_base_id:
+knowledge_base_id: ECROK4NA2O
 temperature: 0.9
 max_tokens_to_sample: 2000
 region_name: us-east-1
