--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-langchain==0.2.12
-langchain_aws==0.1.16
+langchain==0.2.14
+langchain_aws==0.1.17
 elevenlabs==1.6.1
-boto3==1.34.154
+boto3==1.34.162
 streamlit==1.37.1
-yaml==0.2.2
+PyYAML==6.0.1
