--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 langchain==0.2.14
 langchain_aws==0.1.17
 langchain_community==0.2.11
-elevenlabs==1.6.1
-boto3==1.35.5
 streamlit==1.37.1
+boto3==1.34.162
+elevenlabs==1.6.1
 PyYAML==6.0.1
+attrs==23.1.0
+protobuf==3.20.0
+
+
